Fix a few variable tests that had been disabled

--- a/cli/tests/cases/builtins/declare.yaml
+++ b/cli/tests/cases/builtins/declare.yaml
@@ -16,7 +16,7 @@ cases:
       echo $num
 
   - name: "Declare readonly variable"
-    known_failure: true
+    ignore_stderr: true
     stdin: |
       declare -r var="readonly"
       echo $var
