--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -22,6 +22,7 @@ faccess = "0.2.4"
 futures = "0.3.30"
 glob = "0.3.1"
 hostname = "0.3.1"
+indexmap = "2.2.6"
 itertools = "0.12.1"
 lazy_static = "1.4.0"
 log = "0.4.21"
