--- a/cli/tests/cases/arithmetic.yaml
+++ b/cli/tests/cases/arithmetic.yaml
@@ -24,9 +24,32 @@ cases:
       echo " 2  | 4 == $((2|4))"
       echo " 2  & 4 == $((2&4))"
       echo " 2  ^ 3 == $((2^3))"
+      echo " 1 && 1 == $((1&&1))"
       echo " 1 && 0 == $((1&&0))"
-      echo " 1 || 0 == $((1&&0))"
+      echo " 1 || 0 == $((1||0))"
+      echo " 0 || 1 == $((1||0))"
       echo " 1  , 2 == $((1,2))"
+
+  - name: "Unary operators"
+    stdin: |
+      echo "     -1 == $((-1))"
+      echo "     +1 == $((+1))"
+      echo "    ~10 == $((~10))"
+      echo "    !10 == $((!10))"
+
+  - name: "Conditional operator"
+    stdin: |
+      echo "1 ? 2 : 3 == $((1?2:3))"
+      echo "0 ? 2 : 3 == $((0?2:3))"
+
+  - name: "Divide by zero"
+    ignore_stderr: true
+    stdin: |
+      echo "1 / 0 == $((1/0))"
+      echo "Result: $?"
+
+      echo "1 % 0 == $((1%0))"
+      echo "Result: $?"
 
   # TODO: This fails because the << operator ends up being parsed as the indicator of a here tag.
   - name: "Shift arithmetic"
@@ -62,6 +85,24 @@ cases:
       #
       echo "--x == $((--x))"
       echo "x is now $x"
+
+  - name: "Array arithmetic"
+    known_failure: true
+    stdin: |
+      a=(1 2 3)
+      echo "a[0]: $((a[0]))"
+      echo "a[2]: $((a[2]))"
+      echo "a[3]: $((a[3]))"
+
+      echo "b[2]: $((b[2]))"
+
+      echo "a[1]=4 => $((a[1]=4))"
+      echo "a[1]: $((a[1]))"
+
+      echo "a[1]+=1 => $((a[1]+=1))"
+      echo "a[1]: $((a[1]))"
+
+      echo "c[1] += 3 => $((c[1] += 3))"
 
   - name: "Basic arithmetic comparison"
     stdin: |
