Many more tests

--- a/cli/tests/cases/special_parameters.yaml
+++ b/cli/tests/cases/special_parameters.yaml
@@ -5,6 +5,7 @@ cases:
       function myfunc() {
           echo "--myfunc called--"
 
+          echo "COUNT: $#"
           echo "AT-SIGN VALUE: '$@'"
           echo "STAR VALUE: '$*'"
 
