--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,7 +27,9 @@ anyhow = "1.0.81"
 assert_cmd = "2.0.14"
 assert_fs = "1.1.1"
 colored = "2.1.0"
+descape = "1.1.2"
 dir-cmp = "0.1.0"
+expectrl = "0.7.1"
 glob = "0.3.1"
 indent = "0.1.1"
 pathdiff = "0.2.1"
@@ -35,3 +37,4 @@ prettydiff = "0.6.4"
 regex = "1.10.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_yaml = "0.9.34"
+strip-ansi-escapes = "0.2.0"
