--- a/cli/tests/cases/arrays.yaml
+++ b/cli/tests/cases/arrays.yaml
@@ -1,6 +1,19 @@
 name: "Arrays"
+common_test_files:
+  - path: "helpers.sh"
+    contents: |
+      stable_print_assoc_array() {
+          # TODO: enable use of nameref when implemented; for now
+          # we assume the name of the array is assoc_array
+          # local -n assoc_array=$1
+          local key
+
+          for key in $(printf "%s\n" "${!assoc_array[@]}" | sort -n); do
+              echo "\"${key}\" => ${assoc_array[${key}]}"
+          done
+      }
 cases:
-  - name: "Basic array definition and access"
+  - name: "Basic indexed array definition and access"
     stdin: |
       var=(a b c)
       echo "var: $var"
@@ -12,6 +25,20 @@ cases:
       echo "var[4]: ${var[4]}"
       echo "var[*]: ${var[*]}"
       declare -p var
+
+  - name: "Basic associative array definition and access"
+    stdin: |
+      declare -A var=([0]=99 [a]=3 [b]=4 [c]=5)
+      echo "var: $var"
+      echo "var: ${var}"
+      echo "var[0]: ${var[0]}"
+      echo "var[a]: ${var[a]}"
+      echo "var[b]: ${var[b]}"
+      echo "var[c]: ${var[c]}"
+      echo "var[d]: ${var[d]}"
+
+      key="a"
+      echo "var[key]: ${var[${key}]}"
 
   - name: "Array updating via index"
     stdin: |
@@ -34,19 +61,77 @@ cases:
       echo "var[*]: ${var[*]}"
       declare -p var
 
-  - name: "Appending array to array"
+  - name: "Appending array to indexed array"
     stdin: |
       var=(a b c)
       var+=(e f g)
       echo "var[*]: ${var[*]}"
       declare -p var
 
-  - name: "Appending item to array"
+  - name: "Appending array to declared-but-unset indexed array"
+    stdin: |
+      declare -a var
+      var+=(e f g)
+      echo "var[*]: ${var[*]}"
+      declare -p var
+
+  - name: "Appending item to indexed array"
     stdin: |
       var=(a b c)
       var+=d
       echo "var[*]: ${var[*]}"
       declare -p var
+
+  - name: "Appending item to element of indexed array"
+    stdin: |
+      declare -a var=(1 2 3)
+      var[1]+=2
+      echo "var[*]: ${var[*]}"
+      declare -p var
+
+  - name: "Appending item to element of int indexed array"
+    known_failure: true
+    stdin: |
+      declare -ai var=(1 2 3)
+      var[1]+=2
+      echo "var[*]: ${var[*]}"
+      declare -p var
+
+  - name: "Appending array to associative array"
+    stdin: |
+      source helpers.sh
+      declare -A assoc_array=([a]=1 [b]=2 [c]=3)
+      assoc_array+=([d]=4 [e]=5 [f]=6)
+      stable_print_assoc_array assoc_array
+
+  - name: "Appending array to declared-but-unset associative array"
+    stdin: |
+      source helpers.sh
+      declare -A assoc_array
+      assoc_array+=([d]=4 [e]=5 [f]=6)
+      stable_print_assoc_array assoc_array
+
+  - name: "Appending item to associative array"
+    stdin: |
+      source helpers.sh
+      declare -A assoc_array=([a]=1 [b]=2 [c]=3)
+      assoc_array+=d
+      stable_print_assoc_array assoc_array
+
+  - name: "Appending item to element of associative array"
+    stdin: |
+      source helpers.sh
+      declare -A assoc_array=([a]=1 [b]=2 [c]=3)
+      assoc_array[b]+=2
+      stable_print_assoc_array assoc_array
+
+  - name: "Appending item to element of int associative array"
+    known_failure: true
+    stdin: |
+      source helpers.sh
+      declare -Ai assoc_array=([a]=1 [b]=2 [c]=3)
+      assoc_array[b]+=2
+      stable_print_assoc_array assoc_array
 
   - name: "Appending array to item"
     stdin: |
@@ -71,7 +156,6 @@ cases:
       myfunc 'first' bunzip2 bzcat pbunzip2 pbzcat lbunzip2 lbzcat
 
   - name: "Declare via array index"
-    known_failure: true
     stdin: |
       declare -A assoc_array["key"]="value"
       declare -p assoc_array
