Enable piping shell builtins

--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -27,6 +27,7 @@ itertools = "0.12.1"
 lazy_static = "1.4.0"
 log = "0.4.21"
 nix = { version = "0.28.0", features = ["fs"] }
+os_pipe = "1.1.5"
 rand = "0.8.5"
 regex = "1.10.4"
 tempfile = "3.10.1"
