--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
           toolchain: stable
 
       - name: Build
-        run: cargo build
+        run: cargo build --release
 
   test:
     name: "Test"
@@ -38,6 +38,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+          components: llvm-tools-preview
 
       - name: Test
         run: cargo test -- --show-output
@@ -73,16 +74,48 @@ jobs:
         run: cargo clippy --all-targets
 
   benchmark:
+    if: github.event_name == 'pull_request'
     name: "Benchmarks"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+            path: pr
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+            path: main
+            ref: main
 
       - name: Set up Rust
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
 
-      - name: Performance analysis
-        run: cargo bench --workspace
+      - name: Performance analysis on PR
+        run: |
+            set -euo pipefail
+            cd pr
+            cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+
+      - name: Performance analysis on main
+        run: |
+            set -euo pipefail
+            cd main
+            cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+
+      - name: Compare benchmark results
+        uses: openpgpjs/github-action-pull-request-benchmark@v1
+        with:
+          name: 'Time benchmark'
+          tool: 'cargo'
+          pr-benchmark-file-path: pr/benchmarks.txt
+          base-benchmark-file-path: main/benchmarks.txt
+          comment-on-alert: true
+          alert-threshold: '130%'
+          fail-on-alert: false
+          fail-threshold: '150%'
+          # A token is needed to leave commit comments
+          github-token: ${{ secrets.GITHUB_TOKEN }}
