--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,7 +1,15 @@
 name: "CI"
 on:
   pull_request:
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
+      - "LICENSE"
   push:
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
+      - "LICENSE"
     branches:
       - main
 
@@ -19,10 +27,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Rust
+      - name: Set up rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+
+      - name: Enable cargo cache
+        uses: Swatinem/rust-cache@v2
 
       - name: Build
         run: cargo build --release
@@ -34,14 +45,43 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Rust
+      - name: Set up rust toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           components: llvm-tools-preview
 
+      - name: Enable cargo cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          # Needed to make sure cargo-deny is correctly cached.
+          cache-all-crates: true
+
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@v1.6.4
+
       - name: Test
-        run: cargo test -- --show-output
+        run: |
+          set -euxo pipefail
+          cargo binstall --no-confirm cargo-llvm-cov
+          source <(cargo llvm-cov show-env --export-prefix)
+          cargo llvm-cov clean --workspace
+          cargo test -- --show-output
+          cargo llvm-cov report --cobertura --output-path ./codecov.xml
+
+      - name: "Generate code coverage report"
+        uses: clearlyip/code-coverage-report-action@v4
+        id: "code_coverage_report"
+        if: ${{ github.actor != 'dependabot[bot]' }}
+        with:
+          artifact_download_workflow_names: "CI"
+          filename: "codecov.xml"
+
+      - name: "Publish code coverage data to PR"
+        uses: marocchino/sticky-pull-request-comment@v2
+        if: ${{ github.actor != 'dependabot[bot]' && steps.code_coverage_report.outputs.file != '' && (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') }}
+        with:
+          path: code-coverage-results.md
 
   check:
     name: "Source code checks"
@@ -50,10 +90,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Rust
+      - name: Set up rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
+
+      - name: Enable cargo cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          # Needed to make sure cargo-deny is correctly cached.
+          cache-all-crates: true
 
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@v1.6.4
@@ -67,7 +113,7 @@ jobs:
       - name: Deny check
         run: |
           set -euo pipefail
-          cargo binstall --no-confirm cargo-deny
+          cargo binstall --no-confirm --force cargo-deny
           cargo deny check
 
       - name: Clippy check
@@ -81,41 +127,44 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-            path: pr
+          path: pr
 
       - name: Checkout
         uses: actions/checkout@v4
         with:
-            path: main
-            ref: main
+          path: main
+          ref: main
 
-      - name: Set up Rust
+      - name: Set up rust toolchain
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: stable
 
+      - name: Enable cargo cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: |
+            ./pr
+            ./main
+
       - name: Performance analysis on PR
-        run: |
-            set -euo pipefail
-            cd pr
-            cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        working-directory: pr
 
       - name: Performance analysis on main
-        run: |
-            set -euo pipefail
-            cd main
-            cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        working-directory: main
 
       - name: Compare benchmark results
         uses: openpgpjs/github-action-pull-request-benchmark@v1
         with:
-          name: 'Time benchmark'
-          tool: 'cargo'
+          name: "Time benchmark"
+          tool: "cargo"
           pr-benchmark-file-path: pr/benchmarks.txt
           base-benchmark-file-path: main/benchmarks.txt
-          comment-on-alert: true
-          alert-threshold: '130%'
+          comment-always: true
+          alert-threshold: "130%"
           fail-on-alert: false
-          fail-threshold: '150%'
+          fail-threshold: "150%"
           # A token is needed to leave commit comments
           github-token: ${{ secrets.GITHUB_TOKEN }}
